--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"> </p><!--this is the current day info -->
     </header>
-    <div class="container">
+    <div class="container" id="timeblock">
       <!-- Timeblocks go here -->
       
     </div>
